Chat: fetch fix, sort, pagination. car by seller fix, some css